--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.3",
     "view-helpers": "~0.1.5",
-    "winston": "~2.3.0"
+    "winston": "~2.3.0",
+    "natural": "^0.4.0"
   },
   "devDependencies": {
     "babel-eslint": "~7.1.0",
